--- a/label_frontend/src/App.css
+++ b/label_frontend/src/App.css
@@ -3,6 +3,12 @@
     color: #f5f5f5;
     font-family: Arial, sans-serif;
     padding: 20px;
+    height: 96vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
   }
   
   h1 {
