--- a/label_frontend/src/App.css
+++ b/label_frontend/src/App.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 60%;
   }
   
   .feature {
@@ -52,11 +53,13 @@
 
   img {
     max-width: 100%;
+    /* background-color: #f5f5f5; */
+    color: #f5f5f5;
   }
   
   .top-left-header {
-    background-color: #000000; /* Change this to your desired background color */
-    color: #fff; /* Change this to your desired text color */
+    background-color: #000000; /* Your desired background color (black in this case) */
+    color: #fff; /* Your desired text color (white in this case) */
     position: fixed;
     top: 0;
     left: 0;
@@ -64,4 +67,10 @@
     padding: 10px; /* Adjust padding as needed */
     box-sizing: border-box;
     z-index: 100; /* Adjust z-index to ensure it's above other content if necessary */
+}
+
+
+p {
+    text-align: center;
+    flex-wrap: wrap;
 }
