--- a/label_frontend/src/css/AnnotationTool.css
+++ b/label_frontend/src/css/AnnotationTool.css
@@ -95,10 +95,12 @@
     position: absolute;
     /* bottom: 5px;
     left: 5px; */
-    color: white;
+    font-size: medium;
+    font-weight: bold;
+    color: rgb(15, 7, 7);
     cursor: pointer;
-    border: 1px solid white;
+    border: 1px solid rgb(89, 8, 228);
     border-radius: 5px;
     padding: 3px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(45, 12, 212);
 }
